2009-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: Fixed segmentation fault in JCL option handling (bugs
	  #311 and #317).

2009-03-07  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.1.in: Fixed typos.

	* renderer.c: When doing the massaging of the remderer command line
	  foomatic-rip inserts 'gs' at the wrong place in command lines of
	  Foomatic 3.x-generated PPD files for the "Postscript" driver, leading
	  to duplicate calls of Ghostscript (bug #316).

	* foomaticrip.c: Fixed buffer overflow mentioned in bug #311.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c: The value of the "execpath" variable in the config
	file was not used fully: Only the characters leading up to the first
	':' were copied into the programs $PATH environment variable.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: Fixed several bugs in the argument replacements in
	massage_gs_commandline.
	* foomaticrip.c: Use "gspath" and "echopath" from the config file.

2009-02-09  Lars Uebernickel <larsuebernickel@gmx.de>

	* fileconverter.h, foomaticrip.c, renderer.c, util.c: Made
	  foomatic-rip building under Mac OS X, mainly by replacing
	  functions which are GNU-only.

2009-02-02  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: When foomatic-rip looked for JCL options in the
	  binary output of the driver to merge them with JCL options from
	  the PPD file, it read binary data into a C string, which causes
	  problems when this data contains zeroes. Finally fixes Ubuntu bug
	  LP: #303691.

2009-01-29  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: If there were very many JCL lines in the driver's
	  output or coming together by JCL options, the JCL merging
	  process (kid4) segfaulted (Ubuntu bug LP: #321164,
	  https://launchpad.net/bugs/321164).

2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.0.

2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>
