@@ -1,3 +1,13 @@
+2009-03-30  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* foomaticrip.c, options.c: If there are printing system options
+	  (like "media" of CUPS) and PPD options (like "PageSize") on the
+	  command line and they do the same thing (like choosing the paper
+	  size) let the setting of the PPD option always have priority,
+	  as this is expected for a CUPS filter (see CUPS STR #3148). This 
+	  is done by treating the printing system options before the PPD
+	  options. This fixes Ubuntu bug #338999.
+
 2009-03-08  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* renderer.c: Fixed segmentation fault in JCL option handling (bugs
